refactor: fix billing v8 integration